<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.example.storage.DownloadActivity">

	<ImageView
		android:id="@+id/imageview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		tools:src="@mipmap/logo"
		android:layout_centerHorizontal="true"
		android:contentDescription="@string/app_name"/>

	<TextView
		android:id="@+id/textview"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/imageview"
		android:autoLink="web"
		tools:text="http://www.example.com/?id=UAOJNVKBMQUGPYZKCQZRZKJEXRCRXMRSMF"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/zone_download"
		android:weightSum="2"
		android:orientation="horizontal">

		<Button
			style="?android:attr/button"
			android:id="@+id/button_get_metadata"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/metadata_get"/>

		<Button
			style="?android:attr/button"
			android:id="@+id/button_update_metadata"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/metadata_update"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/zone_download"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/zone_bottom"
		android:weightSum="2"
		android:orientation="horizontal">

		<Button
			style="?android:attr/button"
			android:id="@+id/button_download_in_memory"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/download_in_memory"/>

		<Button
			style="?android:attr/button"
			android:id="@+id/button_download_in_file"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/download_in_file"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/zone_bottom"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:weightSum="2"
		android:orientation="horizontal">

		<Button
			style="?android:attr/button"
			android:id="@+id/button_download_via_url"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/download_via_url"/>

		<Button
			style="?android:attr/button"
			android:id="@+id/button_delete_file"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/delete_file"/>

	</LinearLayout>

</RelativeLayout>
