<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.example.storage.MainActivity">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_above="@+id/zone_middle"
		android:contentDescription="@string/app_name"
		android:src="@mipmap/logo"/>

	<LinearLayout
		android:id="@+id/zone_middle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btn_upload"
			style="?android:attr/button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_upload"/>

		<Button
			android:id="@+id/btn_download"
			style="?android:attr/button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_download"/>

	</LinearLayout>

	<Button
		android:id="@+id/btn_cloud_storage"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/zone_middle"
		android:text="@string/cloud_storage"/>

</RelativeLayout>