<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.example.storage.UploadActivity">

	<ImageView
		android:id="@+id/imageview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@mipmap/logo"
		android:layout_centerHorizontal="true"
		android:contentDescription="@string/app_name"/>

	<TextView
		android:id="@+id/textview"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:autoLink="web"
		tools:text="http://www.example.com/?id=UAOJNVKBMQUGPYZKCQZRZKJEXRCRXMRSMF"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/zone_bottom"
		android:weightSum="2"
		android:orientation="horizontal">

		<Button
			style="?android:attr/button"
			android:id="@+id/button_upload_from_memory"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/upload_from_memory"/>

		<Button
			style="?android:attr/button"
			android:id="@+id/button_upload_resume"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:visibility="gone"
			android:text="@string/upload_resume"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/zone_bottom"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:weightSum="2"
		android:orientation="horizontal">

		<Button
			style="?android:attr/button"
			android:id="@+id/button_upload_from_stream"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/upload_from_stream"/>

		<Button
			style="?android:attr/button"
			android:id="@+id/button_upload_from_file"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/upload_from_file"/>

	</LinearLayout>

</RelativeLayout>